Fixed issue where keyboard input on mobile blocks passcode entry input box

--- a/src/modules/media/media.css
+++ b/src/modules/media/media.css
@@ -53,7 +53,7 @@
     display: flex;
     flex-flow: row nowrap;
     justify-content: space-around;
-    margin-top: 10px;
+    margin-bottom: 10px;
 }
 
 .formRow label {
